--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,33 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>ResponsiveMenuAngular2</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <title>ResponsiveMenuAngular2</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Chewy" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json">
+
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+                console.log('Service Worker registered');
+            }).catch(function(err) {
+                console.log('Service Worker registration failed: ', err);
+            });
+        }
+    </script>
 </head>
+
 <body>
-  <app-root>Loading...</app-root>
+    <div id="wrapper">
+        <app-root>Loading...</app-root>
+    </div>
+
 </body>
+
+
 </html>
